--- a/LeetCode/150_EvaluateReversePolishNotation/150_EvaluateReversePolishNotation.vcxproj
+++ b/LeetCode/150_EvaluateReversePolishNotation/150_EvaluateReversePolishNotation.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{347f8303-6e87-46e9-bf2d-0a593a0a26b9}</ProjectGuid>
-    <RootNamespace>SortingAlgorithms</RootNamespace>
+    <ProjectGuid>{ddaa0da9-65cc-4f28-ba62-1bd20772c63b}</ProjectGuid>
+    <RootNamespace>My150EvaluateReversePolishNotation</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -92,12 +92,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>
-      </AdditionalLibraryDirectories>
     </Link>
-    <ProjectReference>
-      <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
-    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -125,7 +120,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -142,35 +136,10 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MyQuicksort.inl" />
-    <ClCompile Include="SortingAlgorithms.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MyBubbleSort.h" />
-    <ClInclude Include="MyBucketSort.h" />
-    <ClInclude Include="MyHeapsort.h" />
-    <ClInclude Include="MyInsertionSort.h" />
-    <ClInclude Include="MyMergesort.h" />
-    <ClInclude Include="MyQuicksort.h" />
-    <ClInclude Include="MyShellSort.h" />
-    <ClInclude Include="MyTimsort.h" />
-    <ClInclude Include="MySelectionSort.h" />
-    <ClInclude Include="MyTreeSort.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="MyBubbleSort.inl" />
-    <None Include="MyBucketSort.inl" />
-    <None Include="MyHeapsort.inl" />
-    <None Include="MyInsertionSort.inl" />
-    <None Include="MyMergesort.inl" />
-    <None Include="MySelectionSort.inl" />
-    <None Include="MyShellSort.inl" />
-    <None Include="MyTimsort.inl" />
-    <None Include="MyTreeSort.inl" />
+    <ClCompile Include="150_EvaluateReversePolishNotation.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
