--- a/LeetCode/27_RemoveElement/27_RemoveElement.vcxproj.filters
+++ b/LeetCode/27_RemoveElement/27_RemoveElement.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="88_MergeSortedArray.cpp">
+    <ClCompile Include="27_RemoveElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
